[package]
name = "aoc-2019"
version = "0.1.0"
authors = ["Bartłomiej Kuras <bartlomiej.kuras@o2.pl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version="1.2", features=["unstable", "attributes"] }

[features]
default = ["day5", "basic"]
day1 = []
day2 = []
day3 = []
day4 = []
day5 = []
basic = []
