[package]
name = "aoc-2019"
version = "0.1.0"
authors = ["Bartłomiej Kuras <bartlomiej.kuras@o2.pl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version="1.2", features=["unstable", "attributes"] }
async-stream = "0.2"
futures-util = "0.3"
futures = "0.3"
permute = "0.1"
tokio = { version = "0.2", features=["macros"] }
nom = "5"

[features]
default = ["day12"]
day1 = []
day2 = []
day3 = []
day4 = []
day5 = []
day6 = []
day7 = []
day8 = []
day9 = []
day10 = []
day11 = []
day12 = []
basic = []
